--- a/css/styles.css
+++ b/css/styles.css
@@ -21,10 +21,24 @@ a {
     text-decoration: none;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
 .container {
     max-width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
+    
+    padding: 0 15px;
     margin: 0 auto;
 }
 
@@ -33,12 +47,12 @@ a {
 
 .header-container{
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 
 .nav {
     display: flex;
+    align-items: center;
 }
 
 .logo {
@@ -51,19 +65,19 @@ a {
     color: #4d5ae5;
 }
 
+.header-logo {
+    padding: 24px 0;
+    margin-right: 76px;
+}
+
 .logo-span {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px; 
-    line-height: 1.16667;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
     color: #2e2f42;
 }
 
 .menu {
     display: flex;
     gap: 40px;
+    align-items: center;
 }
 
 .menu-item {}
@@ -87,19 +101,23 @@ a {
 }
 
 
-address { 
+.address { 
     font-style: normal;
+    margin-left: auto;
 }
 
 .address-list {
     display: flex;
     gap: 40px;
+    align-items: center;
 }
 
 .address-list-item {
 }
 
 .address-list-link {
+    display: block;
+    padding: 24px 0;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 16px;
@@ -137,6 +155,14 @@ address {
 
 .hero {
     background-color: #2e2f42;;
+    padding-top: 188px;
+    padding-bottom: 188px;
+    padding-left: 472px;
+    padding-right: 472px;
+}
+
+.hero-container {
+    
 }
 
 .title {
@@ -147,6 +173,7 @@ address {
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
+    margin-bottom: 48px;
 }
 
 .btn {
@@ -158,6 +185,10 @@ address {
     color: #fff;
     background: #4d5ae5;
     cursor: pointer;
+    margin-left: 164px;
+    min-width: 169px;
+    height: 56px;
+    padding: 16px, 32px;
 }
 
 .btn:hover {
@@ -168,6 +199,20 @@ address {
     background-color: #404BBF;
 }
 
+.ares {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.ares-list {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+}
+
+.ares-list-item {
+    width: calc((100%-72px)/4)
+}
 
 .title-small {
     font-family: "Roboto", sans-serif;
@@ -187,6 +232,7 @@ address {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 
 .inside {
@@ -200,10 +246,61 @@ address {
 
 .team {
     background-color: #f4f4fd;
-} 
+}
+
+.team-title {
+    padding-top: 120px;
+    padding-bottom: 72px;
+}
+
+.ul-team {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    padding-bottom: 120px;
+}
 
 .li-team {
     background-color: #FFFFFF;
+}
+
+.text-container {
+    padding-top: 32px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 32px;
+    text-align: center;
+}
+
+
+
+.portfolio-title {
+    padding-top: 120px;
+    padding-bottom: 72px;
+}
+
+.portfolio-list {
+    display: flex;
+    gap: 24px;
+    row-gap: 48px;
+    flex-wrap: wrap;
+}
+
+.portfolio-item {
+    width: calc((100%-48)/3);
+}
+
+.port-container {
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
+    width: 360px;
+    height: 120px;
+}
+
+.portfolio-container {
+    padding-bottom: 120px;
 }
 
 .footer {
@@ -218,6 +315,7 @@ address {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    margin-bottom: 16px;
 }
 
 .logox-span {
@@ -228,6 +326,7 @@ address {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #f4f4fd;
+    margin-bottom: 16px;
 }
 
 .footer-inside {
@@ -237,4 +336,11 @@ address {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+    width: 264px;
+}
+
+.footer-container {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    margin-left: 156px;
 }
