--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ h1,h2,h3,h4,h5,h6 {
     margin-bottom: 0;
 }
 
+.img {
+    display: block;
+}
+
 a {
     text-decoration: none;
 }
@@ -43,6 +47,7 @@ a {
 }
 
 .header {
+    border-bottom: 1px solid #e7e9fc;
 }
 
 .header-container{
@@ -155,10 +160,9 @@ a {
 
 .hero {
     background-color: #2e2f42;;
-    padding-top: 188px;
-    padding-bottom: 188px;
     padding-left: 472px;
     padding-right: 472px;
+    padding: 188px 0;
 }
 
 .hero-container {
@@ -174,6 +178,7 @@ a {
     text-align: center;
     color: #fff;
     margin-bottom: 48px;
+    max-width: 496px;
 }
 
 .btn {
@@ -189,6 +194,9 @@ a {
     min-width: 169px;
     height: 56px;
     padding: 16px, 32px;
+    display: block;
+    border: none;
+    border-radius: 4px;
 }
 
 .btn:hover {
