--- a/css/styles.css
+++ b/css/styles.css
@@ -281,10 +281,13 @@ a {
 }
 
 
+.portfolio {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 
 .portfolio-title {
-    padding-top: 120px;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
 }
 
 .portfolio-list {
@@ -295,7 +298,7 @@ a {
 }
 
 .portfolio-item {
-    width: calc((100%-48)/3);
+    width: calc((100% - 48px) / 3);
 }
 
 .port-container {
@@ -308,7 +311,6 @@ a {
 }
 
 .portfolio-container {
-    padding-bottom: 120px;
 }
 
 .footer {
