--- a/css/styles.css
+++ b/css/styles.css
@@ -315,6 +315,7 @@ a {
 
 .footer {
     background-color: #2e2f42;
+    padding: 100px 0;
 }
 
 .logox {
@@ -326,6 +327,7 @@ a {
     text-transform: uppercase;
     color: #4d5ae5;
     margin-bottom: 16px;
+    display: inline-block;
 }
 
 .logox-span {
@@ -350,7 +352,6 @@ a {
 }
 
 .footer-container {
-    padding-top: 100px;
-    padding-bottom: 100px;
+   
     margin-left: 156px;
 }
