--- a/css/styles.css
+++ b/css/styles.css
@@ -250,15 +250,16 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    margin-bottom: 8px;
 }
 
 .team {
     background-color: #f4f4fd;
+    padding: 120px 0;
 }
 
 .team-title {
-    padding-top: 120px;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
 }
 
 .ul-team {
@@ -270,14 +271,22 @@ a {
 
 .li-team {
     background-color: #FFFFFF;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .text-container {
-    padding-top: 32px;
+   
     padding-left: 16px;
     padding-right: 16px;
-    padding-bottom: 32px;
+    
     text-align: center;
+    padding: 32px 0;
+}
+
+.title-many {
+    text-align: center;
+    margin-bottom: 8px;
 }
 
 
