--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,11 @@ body {
 ul,
 ol {
     list-style-type: none;
-    margin-left: 0;
-    margin-right: 0;
+    margin: 0;
     padding-left: 0;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,h2,h3,h4,h5,h6,p {
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -223,7 +222,7 @@ a {
 }
 
 .ares-list-item {
-    width: calc((100%-72px)/4)
+    width: calc((100% - 72px) / 4)
 }
 
 .title-small {
@@ -254,7 +253,6 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    margin-bottom: 8px;
 }
 
 .team {
@@ -270,7 +268,6 @@ a {
     display: flex;
     gap: 24px;
     justify-content: center;
-    padding-bottom: 120px;
 }
 
 .li-team {
@@ -287,12 +284,6 @@ a {
     text-align: center;
     padding: 32px 0;
 }
-
-.title-many {
-    text-align: center;
-    margin-bottom: 8px;
-}
-
 
 .portfolio {
     padding-top: 120px;
